set sink type in config file

--- a/src/main/resources/example.conf
+++ b/src/main/resources/example.conf
@@ -2,6 +2,7 @@ template: "Oct 31 00:24:53 haproxy-1 haproxy[30091]: 192.168.1.1:66666 [31/Oct/2
 mapping: "http_code:string:200,404,502;bytes_sent:float:10,5000;method:string:GET,POST"
 duration: 100
 rate: 500
+sink: "console"
 kafkaTopic: "mock-data-test"
 kafkaBrokers: "192.168.10.10:9092"
 kafkaClientId: "none"
