add build-in field: timestamp

--- a/src/main/resources/example.conf
+++ b/src/main/resources/example.conf
@@ -1,4 +1,4 @@
-template: "Oct 31 00:24:53 haproxy-1 haproxy[30091]: 192.168.1.1:66666 [31/Oct/2013:00:24:53.337] example.volcano.org lua_pool/lua_web2 0/0/0/11/44 {http_code} {bytes_sent} - - ---- 230/230/96/22/0 0/0 {method} /foo/bar?a=x&b=y HTTP/1.1"
+template: "{__TIMESTAMP__} haproxy-1 haproxy[30091]: 192.168.1.1:66666 [31/Oct/2013:00:24:53.337] example.volcano.org lua_pool/lua_web2 0/0/0/11/44 {http_code} {bytes_sent} - - ---- 230/230/96/22/0 0/0 {method} /foo/bar?a=x&b=y HTTP/1.1"
 mapping: "http_code:string:200,404,502;bytes_sent:float:10,5000;method:string:GET,POST"
 duration: 100
 rate: 500
